src/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
spec:
  selector:
    app: weather-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
